--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"dev": "vite",
 		"build": "vite build",
 		"preview": "vite preview",
-		"test": "vitest"
+		"test": "vitest",
+		"coverage": "vitest run --coverage"
 	},
 	"dependencies": {
 		"react": "^18.2.0",
@@ -21,6 +22,8 @@
 		"@types/react": "^18.0.27",
 		"@types/react-dom": "^18.0.10",
 		"@vitejs/plugin-react": "^3.1.0",
+		"@vitest/coverage-c8": "^0.28.4",
+		"jest-styled-components": "^7.1.1",
 		"jsdom": "^21.1.0",
 		"vite": "^4.1.0",
 		"vitest": "^0.28.4"
