--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"coverage": "vitest run --coverage"
 	},
 	"dependencies": {
+		"axios": "^1.3.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"styled-components": "^5.3.6"
